<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/spacing_small"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/Project_title"
            tools:text="@string/Project"/>
        />
        <ImageButton
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size"
            android:id="@+id/Project_Change"
            android:src="@drawable/ic_mode_edit_black_18dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/edit_project"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/project_language"
        android:textSize="@dimen/spacing_small"
        tools:text="@string/project_language"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/project_des"
        android:textSize="@dimen/spacing_small"
        tools:text="@string/project_des"/>
</LinearLayout>