<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_medium">

            <!--create the first block-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:layout_toLeftOf="@+id/user_pic"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_small"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/caption_text_size"
                            tools:text="Chijun Sha" />
                        <ImageButton
                            android:id="@+id/NameChange"
                            android:layout_width="@dimen/icon_button_size"
                            android:layout_height="@dimen/icon_button_size"
                            android:layout_marginLeft="@dimen/spacing_xsmall"
                            android:background="?attr/selectableItemBackground"
                            android:contentDescription="@string/change_name"
                            android:src="@drawable/ic_mode_edit_black_18dp" />/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="@dimen/word_small"
                        tools:text="kevin.sha.cj@gmail.com" />
                </LinearLayout>
                <ImageView
                    android:id="@+id/user_pic"
                    android:layout_width="@dimen/user_picture_size"
                    android:layout_height="@dimen/user_picture_size"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/my_pic" />
            </RelativeLayout>

            <!--second: education-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_small"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/education"
                        android:textSize="@dimen/word_large" />
                    <ImageButton
                        android:id="@+id/add_education"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/add_education"
                        android:src="@drawable/ic_baseline_add_24px" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/EducationContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:orientation="vertical" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_small"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/work_experience"
                        android:textSize="@dimen/word_large" />
                    <ImageButton
                        android:id="@+id/add_work_experience"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/add_work_experience"
                        android:src="@drawable/ic_baseline_add_24px" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/WorkExperienceContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:orientation="vertical" />
            </LinearLayout>




        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>